--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
                     <div class="service-item rounded p-5 mb-4">
                         <i class="fa fa-3x fa-user text-primary mb-4"></i>
                         <h4 class="text-uppercase mb-4">User <span class="d-block text-body">Profile</span></h4>
-                        <p class="m-0">User can create her/him own profile</p>
+                        <p class="m-0">User can create her/his own profile</p>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-2">
                     <div class="service-item rounded p-5 mb-4">
                         <i class="fa fa-3x fa-map-marker text-primary mb-4"></i>
                         <h4 class="text-uppercase mb-4">User <span class="d-block text-body">Location</span></h4>
-                        <p class="m-0">User can choose different place from map</p>
+                        <p class="m-0">User can write down different locations from the map</p>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-2">
                     <div class="service-item rounded p-5 mb-4">
                         <i class="fa fa-3x fa-star text-primary mb-4"></i>
                         <h4 class="text-uppercase mb-4">User <span class="d-block text-body">Rating</span></h4>
-                        <p class="m-0">User can give rate to other people after meeting</p>
+                        <p class="m-0">User can give ratings to other people after meeting them</p>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-2">
                     <div class="service-item rounded p-5 mb-4">
                         <i class="fa fa-3x fa-comments text-primary mb-4"></i>
                         <h4 class="text-uppercase mb-4">User <span class="d-block text-body">Chatting</span></h4>
-                        <p class="m-0">User can chat with other people before meeting</p>
+                        <p class="m-0">User can chat with other people before meeting them in the event chat</p>
                     </div>
                 </div>
             </div>
